# cryptomania

./: .gitignore  README.md  makefile  top.mh
_aes/: CMakeLists.txt
_aes/inc/: loadData.hpp  logs.hpp  random_generator.hpp  types.hpp
_aes/res/: nits_ex_128_encrypted  txt1
_aes/src/: aes_cipher.cpp  aes_core.cpp  aes_lookups.cpp  aes_mode.cpp  loadData.cpp  main.cpp  types.cpp
cliaes/: makefile
cliaes/cliaes/: loadData.cpp  loadData.hpp  main.cpp  random_generator.hpp
include/: aes_cipher.hpp  aes_core.hpp  logs.hpp  random_generator.hpp
libaes/: makefile
libaes/libaes/: aes_cipher.cpp  aes_cipher.hpp  aes_core.cpp  aes_lookups.cpp  aes_mode.cpp  libaes.hpp  types.hpp  types_helper.cpp  types_helper.hpp
res/: nits_ex_128_encrypted  nits_ex_128_uncrypted
res/nistGcmTestCases/: msg60.128  msg60iv12.128  msg60iv120.128  msg64.128  msgZeros.128  settings.txt
res/nistTestCases/: settings.txt
res/save/: lt1block  settings.txt
res/testCases/: 3block  3block.128.cbc  3block.128.ctr  3block.128.ecb  3block.192.cbc  3block.192.ctr  3block.192.ecb  3block.256.cbc  3block.256.ctr  3block.256.ecb  eq1block.128.cbc  eq1block.128.ctr  eq1block.192.cbc  eq1block.192.ctr  eq1block.192.ecb  eq1block.256.cbc  eq1block.256.ctr  eq1block.256.ecb  gt1block  gt1block.128.cbc  gt1block.128.ctr  gt1block.128.ecb  gt1block.192.cbc  gt1block.192.ctr  gt1block.192.ecb  gt1block.256.cbc  gt1block.256.ctr  gt1block.256.ecb  lt1block.128.cbc  lt1block.128.ctr  (+8 more)
src/: main.cpp  types.cpp
test/: testGenFiles.ps1  testNist.ps1  testNistGcm.ps1  testSuite.ps1  testUtils.ps1
(+1 files in other folders)
